--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongodb": "^4.0.0",
     "mongoose": "^5.13.3",
     "multer": "^1.4.2",
+    "sharp": "^0.28.3",
     "validator": "^13.6.0"
   }
 }
